hphp/hack/test/sound_dynamic/typing/vec_index.bad.php.exp
ERROR: File "vec_index.bad.php", line 7, characters 21-23:
Invalid assignment (Typing[4110])
  File "vec_index.bad.php", line 4, characters 43-45:
  Expected `int`
  File "vec_index.bad.php", line 7, characters 21-23:
  But got `string`
ERROR: File "vec_index.bad.php", line 8, characters 21-22:
Invalid assignment (Typing[4110])
  File "vec_index.bad.php", line 4, characters 39-46:
  Expected `vec<int>`
  File "vec_index.bad.php", line 7, characters 5-23:
  But got `(_ & _)`
ERROR: File "vec_index.bad.php", line 8, characters 21-22:
Invalid assignment (Typing[4110])
  File "vec_index.bad.php", line 4, characters 43-45:
  Expected `int`
  File "vec_index.bad.php", line 6, characters 21-27:
  But got `dynamic`
ERROR: File "vec_index.bad.php", line 8, characters 21-22:
Invalid assignment (Typing[4110])
  File "vec_index.bad.php", line 4, characters 43-45:
  Expected `int`
  File "vec_index.bad.php", line 7, characters 21-23:
  But got `string`
